# simpleHook

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/ray/snxyjde/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  myde.cpp  mydeX.cpp  xdd.cpp
app/src/main/java/com/ray/snxyjde/: MainActivity.java  MyBoostBall.java  MyToolsDialog.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ray/snxyjde/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
